2012-12-11  James Hunt  <james.hunt@ubuntu.com>

	* init/Makefile.am: Add explicit -lrt for tests (LP: #1088863)

2012-12-07  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Release 1.6.1
	* configure.ac: Change version to 1.6.1

2012-12-07  James Hunt  <james.hunt@ubuntu.com>

	* init/Makefile.am:
	  - TEST_DATA_DIR: use $srcdir, not $PWD.
	  - TEST_DATA_FILES: Corrected filename.
	* dbus/com.ubuntu.Upstart.xml: Restart: Add annotation to make it
	  manifest this is an async call.
	* util/telinit.c: restart_upstart(): Use the async call to avoid the
	  client-side complaining if it detects that Upstart has severed all
	  D-Bus connections in preparation for the re-exec.

2012-12-06  James Hunt  <james.hunt@ubuntu.com>

	* init/job_class.c:
	  - job_class_add_safe(): Don't assert on name collisions for jobs
	    associated with a different session.  (LP: #1079715).
	  - job_class_serialise(): Explicitly disallow user and chroot
	    sessions from being serialised since this scenario is not
	    supported (due to our not serialising ConfSource objects yet).
	  - job_class_deserialise(): Assert that we do not have user and
	    chroot sessions to deal with, and fix potential invalid free if
	    error occurs before JobClass is created.
	  - job_class_deserialise_all(): Explicitly ignore attempted
	    deserialisation of user and chroot sessions.
	* init/state.c:
	  - state_deserialise_resolve_deps(): Ignore classes associated with
	    a user or chroot session.  Specify new session parameter to
	    state_get_job().
	  - state_serialise_blocked(): Encode session index for BLOCKED_JOB.
	    Make function non-static for testing.
	  - state_deserialise_blocked(): Extract session from index index for
	    BLOCKED_JOB to pass to state_get_job().  Default session to NULL
	    to handle upstart 1.6 serialization.  Make function non-static
	    for testing.
	  - state_get_job(): Add @session parameter to allow exact job match.