@@ -42,6 +42,16 @@
       <annotation name="com.netsplit.Nih.Method.Async" value="true" />
     </method>
 
+    <method name="GetEnv">
+      <arg name="name" type="s" direction="in" />
+      <arg name="value" type="s" direction="out" />
+    </method>
+
+    <method name="SetEnv">
+      <arg name="var" type="s" direction="in" />
+      <arg name="replace" type="b" direction="in" />
+    </method>
+
     <!-- Signals for changes to the job list -->
     <signal name="JobAdded">
       <arg name="job" type="o" />
