@@ -603,6 +603,8 @@ main (int   argc,
 	if (disable_sessions)
 		nih_debug ("Sessions disabled");
 
+	job_class_environment_init ();
+
 	/* Run through the loop at least once to deal with signals that were
 	 * delivered to the previous process while the mask was set or to
 	 * process the startup event we emitted.
@@ -938,4 +940,3 @@ console_type_setter (NihOption *option, const char *arg)
 
 	 return 0;
 }
-
