@@ -1,6 +1,15 @@
 2012-12-11  James Hunt  <james.hunt@ubuntu.com>
 
 	* init/Makefile.am: Add explicit -lrt for tests (LP: #1088863)
+	* dbus/com.ubuntu.Upstart.xml: Added "GetEnv" and "SetEnv" methods.
+	* init/control.c:
+	  - control_set_env(): Implementation of "SetEnv" D-Bus method.
+	  - control_get_env(): Implementation of "GetEnv" D-Bus method.
+	* init/job_class.c:
+	  - Added job_environ environment table.
+	  - job_class_environ_init(): Initialise job_environ.
+	  - job_class_environment: Use job_environ.
+	* init/main.c: main(): Call job_class_environ_init().
 
 2012-12-07  James Hunt  <james.hunt@ubuntu.com>
 
